# vipps_api

./: README.md  pyproject.toml  requirements.txt  test_vipps_api.py  vipps_api.py
.github/workflows/: black.yml  django.yml  lint.yml
src/vipps_api/: accounting.py  keys.py  utils.py
src/vippsclient/: vipps_api.py
tests/: test_accounting.py  test_utils.py  test_vipps_api.py
